tests/toy/neg/000542_mutation.toylang
program a = { a = a + a program a = { } .; } .
